[gd_scene load_steps=2 format=3 uid="uid://gawuvru5mnvt"]

[ext_resource type="Script" path="res://src/menu/title_screen.gd" id="1_0odrm"]

[node name="TitleScreen" type="Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( "1_0odrm" )

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
offset_left = 452.0
offset_top = 255.0
offset_right = 572.0
offset_bottom = 345.0
theme_override_constants/separation = 10

[node name="PlayButton" type="Button" parent="CenterContainer/VBoxContainer"]
rect_min_size = Vector2(120, 40)
offset_right = 120.0
offset_bottom = 40.0
text = "PLAY"

[node name="QuitButton" type="Button" parent="CenterContainer/VBoxContainer"]
rect_min_size = Vector2(120, 40)
offset_top = 50.0
offset_right = 120.0
offset_bottom = 90.0
text = "QUIT"

[connection signal="pressed" from="CenterContainer/VBoxContainer/PlayButton" to="." method="_on_play_button_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/QuitButton" to="." method="_on_quit_button_pressed"]
